--- a/src/common/fontIcon.less
+++ b/src/common/fontIcon.less
@@ -1,13 +1,12 @@
+/* 在线链接服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
 @font-face {
-    font-family: "my-iconfont"; /* Project id 4420086 */
-    src: url("//at.alicdn.com/t/c/font_4420086_cjofacjdhd6.woff2?t=1705944136354")
+    font-family: "iconfont"; /* Project id 4633902 */
+    src: url("//at.alicdn.com/t/c/font_4633902_h7kzprp64i6.woff2?t=1732627124211")
             format("woff2"),
-        url("//at.alicdn.com/t/c/font_4420086_cjofacjdhd6.woff?t=1705944136354")
+        url("//at.alicdn.com/t/c/font_4633902_h7kzprp64i6.woff?t=1732627124211")
             format("woff"),
-        url("//at.alicdn.com/t/c/font_4420086_cjofacjdhd6.ttf?t=1705944136354")
-            format("truetype"),
-        url("//at.alicdn.com/t/c/font_4420086_cjofacjdhd6.svg?t=1705944136354#iconfont")
-            format("svg");
+        url("//at.alicdn.com/t/c/font_4633902_h7kzprp64i6.ttf?t=1732627124211")
+            format("truetype");
 }
 
 .iconfont {
@@ -18,9 +17,34 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-bangzhu:before { content: "\e68e"; }
-.icon-qucanjilu:before { content: "\e68f"; }
-.icon-jiantou:before { content: "\e691"; }
-.icon-qiehuan:before { content: "\e692"; }
-.icon-dingwei:before { content: "\e693"; }
-.icon-tishi:before { content: "\e68a"; }
+.icon-dingwei:before {
+    content: "\e606";
+}
+
+.icon-jiantouxia:before {
+    content: "\e62d";
+}
+
+.icon-zhiding:before {
+    content: "\e6b6";
+}
+
+.icon-zhiding1:before {
+    content: "\e890";
+}
+
+.icon-fabusekuai:before {
+    content: "\ec46";
+}
+
+.icon-gerencanshu:before {
+    content: "\e61b";
+}
+
+.icon-xianzhi1:before {
+    content: "\e600";
+}
+
+.icon-ruzhu:before {
+    content: "\e61a";
+}
